fix: substitute grid for flex in mobile resolution to align the content on center;

--- a/frontend/src/pages/ListContent/styles.scss
+++ b/frontend/src/pages/ListContent/styles.scss
@@ -12,7 +12,10 @@
     }
 
     @media(max-width:540px){
-        grid-template-columns: 1fr;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 }
 
